--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -6,8 +6,8 @@
     <title>Posição dos fundos</title>
     <style>
         div.bloco {
-            background-image: url('imagens/wallpaper002.jpg');
-            height: 100px;
+            background-image: url('imagens/wallpaper003.jpg');
+            height: 200px;
             border: 1px solid black;
             border-radius: 20px;
             margin: 10px;
@@ -15,6 +15,18 @@
 
         div#q1 {
             background-position: left top;
+        }
+
+        div#q2 {
+            background-position: left center;
+        }
+
+        div#q3 {
+            background-position: right bottom;
+        }
+
+        div#q4 {
+            background-position: center center;
         }
     </style>
 </head>
