--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -30,6 +30,16 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur!
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur hic tenetur adipisci provident expedita, vel, iure optio at assumenda modi molestiae est soluta aperiam nam! Repudiandae, asperiores nemo. Explicabo, dolorum!
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos laboriosam illo temporibus ea tempora eos amet non necessitatibus. Libero numquam tempore dicta quis repellendus eos! Sint commodi reprehenderit dolorum obcaecati!
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laboriosam maxime, perferendis, obcaecati nostrum dolorem quia voluptate saepe aliquid voluptatibus hic odit soluta blanditiis voluptatem ipsam culpa cumque et ab?
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis, saepe provident libero sequi sed nemo numquam doloremque nulla mollitia, magni enim? Cum aperiam accusantium ea error ex saepe placeat!
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium ab nam eligendi debitis nobis quae, nulla distinctio temporibus, ex cupiditate tenetur dignissimos magni laborum, quisquam modi necessitatibus accusantium non beatae?
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, aut optio! Nam harum dolorem officia et doloribus optio molestias repellat magnam aperiam corporis, dolores hic voluptatibus ab dolore ratione inventore?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ipsum hic at numquam et adipisci doloremque, magnam vel nobis, quia optio assumenda eligendi magni dicta repellat voluptatum. Corporis, similique esse?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, nobis. Doloremque alias molestias nobis officia. Sequi fuga iure perferendis error itaque provident nostrum, impedit aperiam sed iste reprehenderit nihil veniam.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repudiandae ea officia saepe velit. Sint fugiat tenetur repellat commodi similique eum iusto earum esse ratione accusantium! Dolor ad magni accusamus.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint autem blanditiis explicabo reiciendis suscipit, reprehenderit dolorem nam quae asperiores voluptate voluptates commodi ipsam laudantium debitis! Architecto numquam ad perferendis a!
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptate iure laborum voluptates atque dignissimos voluptatum velit alias. Culpa eos quibusdam voluptate exercitationem fuga labore facere minima nemo rerum dolor.
+     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga obcaecati harum, quaerat, illum laboriosam eveniet iure labore cum cupiditate nesciunt unde placeat necessitatibus nisi ipsa? Eum recusandae id hic reprehenderit.
+     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam deserunt, corrupti, nulla ut fugiat omnis excepturi, ea incidunt non laborum optio quam esse sunt in praesentium! Dignissimos sapiente facilis aspernatur?
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod maxime culpa minima facilis consectetur! Nihil voluptatum numquam architecto praesentium repudiandae, libero maiores itaque doloribus laboriosam autem temporibus. Molestiae, maxime odio?
     </p>
 </main>
 </body>
