--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagens de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 99vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,19 +31,19 @@
 <body>
     <main>
     <h1>Teste de Imagem de fundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur!
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur hic tenetur adipisci provident expedita, vel, iure optio at assumenda modi molestiae est soluta aperiam nam! Repudiandae, asperiores nemo. Explicabo, dolorum!
-     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos laboriosam illo temporibus ea tempora eos amet non necessitatibus. Libero numquam tempore dicta quis repellendus eos! Sint commodi reprehenderit dolorum obcaecati!
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laboriosam maxime, perferendis, obcaecati nostrum dolorem quia voluptate saepe aliquid voluptatibus hic odit soluta blanditiis voluptatem ipsam culpa cumque et ab?
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis, saepe provident libero sequi sed nemo numquam doloremque nulla mollitia, magni enim? Cum aperiam accusantium ea error ex saepe placeat!
-     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium ab nam eligendi debitis nobis quae, nulla distinctio temporibus, ex cupiditate tenetur dignissimos magni laborum, quisquam modi necessitatibus accusantium non beatae?
-     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, aut optio! Nam harum dolorem officia et doloribus optio molestias repellat magnam aperiam corporis, dolores hic voluptatibus ab dolore ratione inventore?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ipsum hic at numquam et adipisci doloremque, magnam vel nobis, quia optio assumenda eligendi magni dicta repellat voluptatum. Corporis, similique esse?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, nobis. Doloremque alias molestias nobis officia. Sequi fuga iure perferendis error itaque provident nostrum, impedit aperiam sed iste reprehenderit nihil veniam.
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repudiandae ea officia saepe velit. Sint fugiat tenetur repellat commodi similique eum iusto earum esse ratione accusantium! Dolor ad magni accusamus.
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint autem blanditiis explicabo reiciendis suscipit, reprehenderit dolorem nam quae asperiores voluptate voluptates commodi ipsam laudantium debitis! Architecto numquam ad perferendis a!
-     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptate iure laborum voluptates atque dignissimos voluptatum velit alias. Culpa eos quibusdam voluptate exercitationem fuga labore facere minima nemo rerum dolor.
-     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga obcaecati harum, quaerat, illum laboriosam eveniet iure labore cum cupiditate nesciunt unde placeat necessitatibus nisi ipsa? Eum recusandae id hic reprehenderit.
-     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam deserunt, corrupti, nulla ut fugiat omnis excepturi, ea incidunt non laborum optio quam esse sunt in praesentium! Dignissimos sapiente facilis aspernatur?
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod maxime culpa minima facilis consectetur! Nihil voluptatum numquam architecto praesentium repudiandae, libero maiores itaque doloribus laboriosam autem temporibus. Molestiae, maxime odio?
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates distinctio in dolore, facere expedita tempore doloribus nulla sequi fugiat quidem laudantium libero mollitia suscipit minus iusto veritatis ut similique ipsam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab inventore neque nesciunt corporis amet. Quis molestias reiciendis natus beatae molestiae ducimus laboriosam voluptas magni, harum vero eaque excepturi a. Cum!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit temporibus inventore reprehenderit. Corrupti dolore distinctio placeat fugit laboriosam consequuntur rem eos sapiente magni, quaerat tempora doloribus nihil odio necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde necessitatibus quas facere neque similique, debitis minus sunt. Facere facilis nemo voluptatum quia ipsa quidem unde consequatur fugit quam minus.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos esse voluptatum ab rem quae eaque quisquam dolore ipsum. Necessitatibus similique quis blanditiis deleniti! Dolorem facere perspiciatis tenetur asperiores molestiae in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, incidunt molestiae. Inventore maiores ut aut, veniam adipisci quisquam, fugiat quaerat sed dicta laudantium magnam dolorem deleniti a ipsa nisi non!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur earum, eligendi dolore vitae, tempora voluptatibus autem eos, sit molestias reiciendis nemo quis rem qui. Molestias rem quod error fuga voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias nisi earum corporis numquam deserunt excepturi, aut eveniet non sit voluptatum, voluptatem tenetur, nihil iusto incidunt et totam reprehenderit labore.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur earum, eligendi dolore vitae, tempora voluptatibus autem eos, sit molestias reiciendis nemo quis rem qui. Molestias rem quod error fuga voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias nisi earum corporis numquam deserunt excepturi, aut eveniet non sit voluptatum, voluptatem tenetur, nihil iusto incidunt et totam reprehenderit labore.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur earum, eligendi dolore vitae, tempora voluptatibus autem eos, sit molestias reiciendis nemo quis rem qui. Molestias rem quod error fuga voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias nisi earum corporis numquam deserunt excepturi, aut eveniet non sit voluptatum, voluptatem tenetur, nihil iusto incidunt et totam reprehenderit labore.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore rerum debitis enim libero commodi odit blanditiis, in impedit deleniti odio eos quaerat reprehenderit consectetur laudantium incidunt facilis rem tenetur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur earum, eligendi dolore vitae, tempora voluptatibus autem eos, sit molestias reiciendis nemo quis rem qui. Molestias rem quod error fuga voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias nisi earum corporis numquam deserunt excepturi, aut eveniet non sit voluptatum, voluptatem tenetur, nihil iusto incidunt et totam reprehenderit labore.
     </p>
 </main>
 </body>
